--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,7 @@ jobs:
       run: |
         set -e
         mkdir web
+        cp -r ./website/* ./web/
     - name: Download artifacts
       uses: actions/download-artifact@v4
       with:
